# phopylslhelper

./: README.md  main.py  pyproject.toml
config/: example.yaml  streaming.yaml.example  visualization.yaml.example
openspec/: project.md
openspec/changes/implement-lsl-stream-tools/: design.md  proposal.md  tasks.md
openspec/changes/implement-lsl-stream-tools/specs/lsl-cloud-streaming/: spec.md
openspec/changes/implement-lsl-stream-tools/specs/lsl-visualization/: spec.md
src/phopylslhelper/: __init__.py  easy_time_sync.py  general_helpers.py  main.py
src/phopylslhelper/core/: __init__.py  config.py  logging_config.py  lsl_manager.py  reader.py  types.py
src/phopylslhelper/file_metadata_caching/: __init__.py  data_file_metadata.py  file_metadata.py  video_metadata.py
src/phopylslhelper/mixins/: app_helpers.py
src/phopylslhelper/streaming/: __init__.py  message_formatter.py  metrics.py  mqtt_relay.py  reliability.py  timestamp_manager.py
src/phopylslhelper/visualization/: __init__.py  base.py  factory.py  mne_backend.py  pyqt_backend.py  web_backend.py
