[project]
name = "phopylslhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pho Hale", email = "PhoHale@gmail.com" }
]
requires-python = ">=3.9.13"
dependencies = [
    "pylsl>=1.17.6",
    "pytz>=2025.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
